--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "googleapis": "^126.0.0"
   }
 }
 
