--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "sqlite3": "^5.1.7",
-    "googleapis": "^126.0.0"
+    "googleapis": "^126.0.0",
+    "stripe": "^14.0.0",
+    "dotenv": "^16.3.1"
   }
 }
 
