--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "dev": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
-    "sqlite3": "^5.1.7",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-session": "^1.18.2",
     "googleapis": "^126.0.0",
-    "stripe": "^14.0.0",
-    "dotenv": "^16.3.1"
+    "sqlite3": "^5.1.7",
+    "stripe": "^14.0.0"
   }
 }
-
